--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Thinkup crafts</title>
+    <title>Minoltas Technos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -373,11 +373,11 @@
                         </p>
 
                         <div class="clearlinks">
-                            <strong>thinkupcrafts.</strong> <a href="tel:+18376528800">+1 837 652 8800</a>
+                            <strong>Minoltas Technos.</strong> <a href="tel:+18376528800">+1 837 652 8800</a>
                         </div>
 
                         <div class="clearlinks">
-                            <strong>thinkupcrafts.</strong> <a href="mailto:support@bestlooker.pro">support@thinkupcrafts.pro</a>
+                            <strong>Minoltas Technos.</strong> <a href="mailto:support@minoltastechnos.pro">support@MinoltasTechnos.pro</a>
                         </div>
 
                     </div>
@@ -459,12 +459,12 @@
                 <div class="row text-gray">
 
                     <div class="col-md-4 col-lg-3">
-                        <b>© Thinkup Crafts 2024.</b>
+                        <b>© Minoltas Technos.</b>
                     </div>
 
                     <div class="col-md-7 offset-md-1 offset-lg-2 clearfix">
 
-                        <b>Based in Rajahmahendravaram, India.</b>
+                        <b>Based in Hyderabad, India.</b>
 
                         <!-- Back to Top Link -->
                         <div class="local-scroll float-end mt-n20 mt-sm-10">
