--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Thinkup crafts</title>
+    <title>Minoltas Technos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -114,7 +114,7 @@
                                 <div class="w-100 text-center text-lg-start">
 
                                     <h2 class="section-caption-fancy mb-30 mb-xs-20 wow fadeInUp" data-wow-duration="1.2s">
-                                       Thinkup Crafts
+                                        Minoltas technos
                                     </h2>
 
                                     <h1 class="hs-title-10 mb-30">
@@ -675,7 +675,7 @@
 
                                     <div class="col-md-6 number-1-item mb-sm-10">
                                         <div class="number-1-title">
-                                            95
+                                            20
                                         </div>
                                         <div class="number-1-descr">
                                             Projects done successfully
@@ -684,7 +684,7 @@
 
                                     <div class="col-md-6 number-1-item">
                                         <div class="number-1-title">
-                                            58
+                                            15
                                         </div>
                                         <div class="number-1-descr">
                                             Satisfied customers
@@ -1455,10 +1455,10 @@
                                             Our Email
                                         </h4>
                                         <div class="ci-text">
-                                            support@bestlooker.pro
+                                            support@Minoltas Technos.pro
                                         </div>
                                         <div>
-                                            <a href="mailto:support@bestlooker.pro" class="link-hover-anim" data-link-animate="y">Say Hello <i class="bi bi-arrow-right size-18"></i></a>
+                                            <a href="mailto:support@Minoltas Technos.pro" class="link-hover-anim" data-link-animate="y">Say Hello <i class="bi bi-arrow-right size-18"></i></a>
                                         </div>
                                     </div>
                                     <!-- End Email -->
@@ -1599,11 +1599,11 @@
                         </p>
 
                         <div class="clearlinks">
-                            <strong>thinkupcrafts.</strong> <a href="tel:+18376528800">+1 837 652 8800</a>
+                            <strong>Minoltas Technos.</strong> <a href="tel:+18376528800">+1 837 652 8800</a>
                         </div>
 
                         <div class="clearlinks">
-                            <strong>thinkupcrafts.</strong> <a href="mailto:support@bestlooker.pro">support@thinkupcrafts.pro</a>
+                            <strong>Minoltas Technos.</strong> <a href="mailto:support@bestlooker.pro">support@MinoltasTechnos.pro</a>
                         </div>
 
                     </div>
@@ -1685,12 +1685,12 @@
                 <div class="row text-gray">
 
                     <div class="col-md-4 col-lg-3">
-                        <b>© Thinkup Crafts 2024.</b>
+                        <b>© Minoltas Technos.</b>
                     </div>
 
                     <div class="col-md-7 offset-md-1 offset-lg-2 clearfix">
 
-                        <b>Based in Rajahmahendravaram, India.</b>
+                        <b>Based in Hyderabad, India.</b>
 
                         <!-- Back to Top Link -->
                         <div class="local-scroll float-end mt-n20 mt-sm-10">
