--- a/blog.html
+++ b/blog.html
@@ -547,11 +547,11 @@
                         </div>
 
                         <p>
-                            Integer auctor aliquet martor, sed lorem malesuada eros blandit eget. Proin lacinia mortoc id odio vestibulum.
+                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
                         </p>
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="tel:+18376528800">+1 837 652 8800</a>
+                            <strong>Minoltas Technos.</strong> <a href="tel:+918985214845">+91 8985214845</a>
                         </div>
 
                         <div class="clearlinks">
