--- a/index.html
+++ b/index.html
@@ -1438,10 +1438,10 @@
                                             Our Address
                                         </h4>
                                         <div class="ci-text">
-                                            123 King Street, London W60 10250, United Kingdom
+                                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
                                         </div>
                                         <div>
-                                            <a href="https://goo.gl/maps/7Vw1PBhxx5BaXStr8" class="link-hover-anim" data-link-animate="y" rel="nofollow noopener" target="_blank">See Map <i class="bi bi-arrow-right size-18"></i></a>
+                                            <a href="#" class="link-hover-anim" data-link-animate="y" rel="nofollow noopener" target="_blank">See Map <i class="bi bi-arrow-right size-18"></i></a>
                                         </div>
                                     </div>
                                     <!-- End Address -->
@@ -1455,7 +1455,7 @@
                                             Our Email
                                         </h4>
                                         <div class="ci-text">
-                                            support@Minoltas Technos.pro
+                                            support@MinoltasTechnos.pro
                                         </div>
                                         <div>
                                             <a href="mailto:support@Minoltas Technos.pro" class="link-hover-anim" data-link-animate="y">Say Hello <i class="bi bi-arrow-right size-18"></i></a>
@@ -1472,13 +1472,13 @@
                                             Call Us
                                         </h4>
                                         <div class="ci-text">
-                                            +1 837 652 8800
+                                            +91 8985214845
                                             <div class="small">
                                                 (Monday-Friday: 11am to 12pm)
                                             </div>
                                         </div>
                                         <div>
-                                            <a href="tel:+18376528800" class="link-hover-anim" data-link-animate="y">Call now <i class="bi bi-arrow-right size-18"></i></a>
+                                            <a href="tel:+918985214845" class="link-hover-anim" data-link-animate="y">Call now <i class="bi bi-arrow-right size-18"></i></a>
                                         </div>
                                     </div>
                                     <!-- End Phone -->
@@ -1595,12 +1595,13 @@
                         </div>
 
                         <p>
-                            Integer auctor aliquet martor, sed lorem malesuada eros blandit eget. Proin lacinia mortoc id odio vestibulum.
+                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
                         </p>
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="tel:+18376528800">+1 837 652 8800</a>
+                            <strong>Minoltas Technos.</strong> <a href="tel:+918985214845">+91 8985214845</a>
                         </div>
+
 
                         <div class="clearlinks">
                             <strong>Minoltas Technos.</strong> <a href="mailto:support@bestlooker.pro">support@MinoltasTechnos.pro</a>
