--- a/about.html
+++ b/about.html
@@ -565,15 +565,16 @@
                         </div>
 
                         <p>
-                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
+                            1st Floor, Western Pearl, Hitech City Rd, Kondapur, Hyderabad, Telangana 500084
                         </p>
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="tel:+918985214845">+91 8985214845</a>
+                            <strong>Minoltas Technos.</strong>  <!-- <a href="tel:+918985214845">+91 8985214845</a> -->
                         </div>
 
+
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="mailto:support@MinoltasTechnos">support@MinoltasTechnos.pro</a>
+                            <strong>Minoltas Technos.</strong> <a href="mailto:Info@minaltos.com">Info@minaltos.com</a>
                         </div>
 
                     </div>
