--- a/contact.html
+++ b/contact.html
@@ -123,16 +123,17 @@
             <!-- End Home Section -->
 
 
+       
             <!-- Contact Section -->
             <section class="page-section" id="contact">
-                <div class="container position-relative wow fadeInUp" data-wow-delay="0">
+                <div class="container position-relative">
 
                     <div class="row">
 
                         <!-- Left Column -->
                         <div class="col-lg-4 mb-md-50 mb-sm-30 position-relative z-index-1">
 
-                            <h2 class="section-caption-fancy mb-20 mb-xs-10">Let's Talk</h2>
+                            <h2 class="section-caption-fancy mb-20 mb-xs-10">Contact Us</h2>
 
                             <h3 class="section-title mb-50 mb-sm-30">We’re open to talk to good people.</h3>
 
@@ -149,7 +150,7 @@
                                             Our Address
                                         </h4>
                                         <div class="ci-text">
-                                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
+                                            1st Floor, Western Pearl, Hitech City Rd, Kondapur, Hyderabad, Telangana 500084
                                         </div>
                                         <div>
                                             <a href="#" class="link-hover-anim" data-link-animate="y" rel="nofollow noopener" target="_blank">See Map <i class="bi bi-arrow-right size-18"></i></a>
@@ -166,10 +167,10 @@
                                             Our Email
                                         </h4>
                                         <div class="ci-text">
-                                            support@Minoltas Technos.pro
+                                            Info@minaltos.com
                                         </div>
                                         <div>
-                                            <a href="mailto:support@Minoltas Technos.pro" class="link-hover-anim" data-link-animate="y">Say Hello <i class="bi bi-arrow-right size-18"></i></a>
+                                            <a href="mailto:Info@minaltos.com" class="link-hover-anim" data-link-animate="y">Say Hello <i class="bi bi-arrow-right size-18"></i></a>
                                         </div>
                                     </div>
                                     <!-- End Email -->
@@ -180,16 +181,16 @@
                                             <i class="bi bi-phone"></i>
                                         </div>
                                         <h4 class="ci-title visually-hidden">
-                                            Call Us
+                                            <!-- Call Us -->
                                         </h4>
                                         <div class="ci-text">
-                                        +91 8985214845
+                                            <!-- +91 8985214845 -->
                                             <div class="small">
                                                 (Monday-Friday: 11am to 12pm)
                                             </div>
                                         </div>
                                         <div>
-                                            <a href="tel:+918985214845" class="link-hover-anim" data-link-animate="y">Call now <i class="bi bi-arrow-right size-18"></i></a>
+                                            <a href="tel:+91" class="link-hover-anim" data-link-animate="y">Call now <i class="bi bi-arrow-right size-18"></i></a>
                                         </div>
                                     </div>
                                     <!-- End Phone -->
@@ -207,7 +208,9 @@
 
                                 <!-- Decorative Image -->
                                 <div class="decoration-11 d-none d-xl-block">
-                                    <img src="images/demo-fancy/contact-section-image.png" width="225" height="250" alt="" />
+                                    <div class="wow fadeInUp">
+                                        <img src="images/demo-fancy/contact-section-image.png" width="225" height="250" alt="" />
+                                    </div>
                                 </div>
                                 <!-- End Decorative Image -->
 
@@ -289,76 +292,6 @@
             </section>
             <!-- End Contact Section -->
 
-
-            <!-- Divider -->
-            <hr class="mt-0 mb-0" />
-            <!-- End Divider -->
-
-
-            <!-- FAQ Section -->
-            <section class="page-section z-index-1">
-                <div class="container position-relative">
-                    <div class="row position-relative">
-
-                        <div class="col-md-6 col-lg-5 mb-md-50 mb-sm-30">
-
-                            <h3 class="section-title mb-30">
-                                Frequently Asked Questions
-                            </h3>
-
-                            <p class="text-gray mb-0">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pulvinar vitae neque et porttitor. Integer non dapibus diam, ac eleifend lectus lorem ipsum. In maximus ligula semper metus pellentesque mattis. Maecenas volutpat, diam enim sagittis quam.
-                            </p>
-
-                        </div>
-
-                        <div class="col-md-6 offset-lg-1 pt-10 pt-sm-0">
-
-                            <!-- Accordion -->
-                            <dl class="toggle">
-
-                                <dt>
-                                        <a href="#">What do you mean by an End Product?</a>
-                                    </dt>
-                                <dd class="black">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula porttitor rutrum. Ut laoreet sodales rutrum. Ut eget tristique nibh. Cras mattis est eget lacus dignissim, non consectetur velit pellentesque. Ut sit amet placerat eros, id gravida
-                                    arcu. Sed felis purus, tempor ac vestibulum nec, consectetur at purus.
-                                </dd>
-
-                                <dt>
-                                        <a href="#">Where do I find my Purchase or License code?</a>
-                                    </dt>
-                                <dd class="black">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula porttitor rutrum. Ut laoreet sodales rutrum. Ut eget tristique nibh. Cras mattis est eget lacus dignissim, non consectetur velit pellentesque. Ut sit amet placerat eros, id gravida
-                                    arcu. Sed felis purus, tempor ac vestibulum nec, consectetur at purus.
-                                </dd>
-
-                                <dt>
-                                        <a href="#">Do I need to buy a licence for each site?</a>
-                                    </dt>
-                                <dd class="black">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula porttitor rutrum. Ut laoreet sodales rutrum. Ut eget tristique nibh. Cras mattis est eget lacus dignissim, non consectetur velit pellentesque. Ut sit amet placerat eros, id gravida
-                                    arcu. Sed felis purus, tempor ac vestibulum nec, consectetur at purus.
-                                </dd>
-
-                                <dt>
-                                        <a href="#">Is my license transferable?</a>
-                                    </dt>
-                                <dd class="black">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula porttitor rutrum. Ut laoreet sodales rutrum. Ut eget tristique nibh. Cras mattis est eget lacus dignissim, non consectetur velit pellentesque. Ut sit amet placerat eros, id gravida
-                                    arcu. Sed felis purus, tempor ac vestibulum nec, consectetur at purus.
-                                </dd>
-
-                            </dl>
-                            <!-- End Accordion -->
-
-                        </div>
-
-                    </div>
-                </div>
-            </section>
-            <!-- End FAQ Section -->
-
         </main>
 
         <!-- Footer -->
@@ -374,16 +307,16 @@
                         </div>
 
                         <p>
-                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
+                            1st Floor, Western Pearl, Hitech City Rd, Kondapur, Hyderabad, Telangana 500084
                         </p>
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="tel:+918985214845">+91 8985214845</a>
+                            <strong>Minoltas Technos.</strong>  <!-- <a href="tel:+918985214845">+91 8985214845</a> -->
                         </div>
 
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="mailto:support@bestlooker.pro">support@MinoltasTechnos.pro</a>
+                            <strong>Minoltas Technos.</strong> <a href="mailto:Info@minaltos.com">Info@minaltos.com</a>
                         </div>
 
                     </div>
