--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@
                                             Our Address
                                         </h4>
                                         <div class="ci-text">
-                                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
+                                            1st Floor, Western Pearl, Hitech City Rd, Kondapur, Hyderabad, Telangana 500084
                                         </div>
                                         <div>
                                             <a href="#" class="link-hover-anim" data-link-animate="y" rel="nofollow noopener" target="_blank">See Map <i class="bi bi-arrow-right size-18"></i></a>
@@ -1455,10 +1455,10 @@
                                             Our Email
                                         </h4>
                                         <div class="ci-text">
-                                            support@MinoltasTechnos.pro
+                                            Info@minaltos.com
                                         </div>
                                         <div>
-                                            <a href="mailto:support@Minoltas Technos.pro" class="link-hover-anim" data-link-animate="y">Say Hello <i class="bi bi-arrow-right size-18"></i></a>
+                                            <a href="mailto:Info@minaltos.com" class="link-hover-anim" data-link-animate="y">Say Hello <i class="bi bi-arrow-right size-18"></i></a>
                                         </div>
                                     </div>
                                     <!-- End Email -->
@@ -1469,16 +1469,16 @@
                                             <i class="bi bi-phone"></i>
                                         </div>
                                         <h4 class="ci-title visually-hidden">
-                                            Call Us
+                                            <!-- Call Us -->
                                         </h4>
                                         <div class="ci-text">
-                                            +91 8985214845
+                                            <!-- +91 8985214845 -->
                                             <div class="small">
                                                 (Monday-Friday: 11am to 12pm)
                                             </div>
                                         </div>
                                         <div>
-                                            <a href="tel:+918985214845" class="link-hover-anim" data-link-animate="y">Call now <i class="bi bi-arrow-right size-18"></i></a>
+                                            <a href="tel:+91" class="link-hover-anim" data-link-animate="y">Call now <i class="bi bi-arrow-right size-18"></i></a>
                                         </div>
                                     </div>
                                     <!-- End Phone -->
@@ -1595,16 +1595,16 @@
                         </div>
 
                         <p>
-                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
+                            1st Floor, Western Pearl, Hitech City Rd, Kondapur, Hyderabad, Telangana 500084
                         </p>
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="tel:+918985214845">+91 8985214845</a>
+                            <strong>Minoltas Technos.</strong>  <!-- <a href="tel:+918985214845">+91 8985214845</a> -->
                         </div>
 
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="mailto:support@bestlooker.pro">support@MinoltasTechnos.pro</a>
+                            <strong>Minoltas Technos.</strong> <a href="mailto:Info@minaltos.com">Info@minaltos.com</a>
                         </div>
 
                     </div>
