--- a/blog.html
+++ b/blog.html
@@ -534,8 +534,8 @@
 
         </main>
 
-        <!-- Footer -->
-        <footer class="page-section footer bg-dark-1 light-content pb-30">
+         <!-- Footer -->
+         <footer class="page-section footer bg-dark-1 light-content pb-30">
             <div class="container">
 
                 <div class="row pb-120 pb-sm-80 pb-xs-50">
@@ -547,15 +547,16 @@
                         </div>
 
                         <p>
-                            77-8-4 Katari Gardens, Gorakshanapet, Gandhipuram, Rajamahendravaram, Andhra Pradesh 533106
+                            1st Floor, Western Pearl, Hitech City Rd, Kondapur, Hyderabad, Telangana 500084
                         </p>
 
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="tel:+918985214845">+91 8985214845</a>
+                            <strong>Minoltas Technos.</strong>  <!-- <a href="tel:+918985214845">+91 8985214845</a> -->
                         </div>
 
+
                         <div class="clearlinks">
-                            <strong>Minoltas Technos.</strong> <a href="mailto:support@MinoltasTechnos.pro">support@MinoltasTechnos.pro</a>
+                            <strong>Minoltas Technos.</strong> <a href="mailto:Info@minaltos.com">Info@minaltos.com</a>
                         </div>
 
                     </div>
@@ -637,7 +638,7 @@
                 <div class="row text-gray">
 
                     <div class="col-md-4 col-lg-3">
-                        <b>© Minotas Technos.</b>
+                        <b>© Minoltas Technos.</b>
                     </div>
 
                     <div class="col-md-7 offset-md-1 offset-lg-2 clearfix">
